--- a/UserRoles/Views/Order/CusOngoing.cshtml
+++ b/UserRoles/Views/Order/CusOngoing.cshtml
@@ -4,7 +4,7 @@
 
 @{
     ViewBag.Title = "CusOngoing";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    //Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <br />
 <br />
@@ -13,9 +13,44 @@
 <br />
 <br />
 
-<h2>Ongoing Orders</h2>
+<head>
+    <!-- Meta Tags -->
+    @*<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta name="keywords" content="Modernize Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template,
+Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony Ericsson, Motorola web design" />
+    <script>
+        addEventListener("load", function () {
+            setTimeout(hideURLbar, 0);
+        }, false);
 
-<form asp-controller="Order" asp-action="CusOngoing">
+        function hideURLbar() {
+            window.scrollTo(0, 1);
+        }
+    </script>*@
+    <!-- //Meta Tags -->
+    <!-- Style-sheets -->
+    <!-- Bootstrap Css -->
+    <link href="tables/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+    <!-- Bootstrap Css -->
+    <!-- Common Css -->
+    <link href="/tables/css/style.css" rel="stylesheet" type="text/css" media="all" />
+    <!--// Common Css -->
+    <!-- Nav Css -->
+    @*<link rel="stylesheet" href="/tables/css/style4.css">*@
+    <!--// Nav Css -->
+    <!-- Fontawesome Css -->
+    @*<link href="/tables/css/fontawesome-all.css" rel="stylesheet">*@
+    <!--// Fontawesome Css -->
+    <!--// Style-sheets -->
+    <!--web-fonts-->
+    @*<link href="//fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">*@
+    <!--//web-fonts-->
+</head>
+<h2 style="font-family:Roboto" >Ongoing Orders</h2>
+
+@*<form asp-controller="Order" asp-action="CusOngoing">
 
 
     <p>You may search by Order ID</p>
@@ -24,70 +59,64 @@
 
 
 
+</form>*@
+<form asp-controller="Order" asp-action="CusOngoing" class="form-inline mx-auto search-form">
+    <input class="form-control mr-sm-2" type="text" name="SearchString" placeholder="Search" aria-label="SearchString" @*required=""*@>
+    <button class="btn btn-style my-2 my-sm-0" type="submit">Search</button>
 </form>
 
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.First().OrderID)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.First().OrderDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.First().PaymentType)
-        </th>
 
-        <th>
-            @Html.DisplayNameFor(model => model.First().CustomerName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.First().Surname)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.First().CustomerPhone)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.First().Email)
-        </th>
-        <th></th>
-    </tr>
+<body>
 
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.OrderID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OrderDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PaymentType)
-            </td>
+    <div class="outer-w3-agile mt-3">
+        <h4 class="tittle-w3-agileits mb-4"></h4>
+        <table class="table table-bordered table-responsive" >
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col"> @Html.DisplayNameFor(model => model.First().OrderID)</th>
+                    <th scope="col">@Html.DisplayNameFor(model => model.First().OrderDate)</th>
+                    <th scope="col">@Html.DisplayNameFor(model => model.First().PaymentType)</th>
+                    <th scope="col">@Html.DisplayNameFor(model => model.First().CustomerName)</th>
+                    <th scope="col">@Html.DisplayNameFor(model => model.First().Surname)</th>
+                    <th scope="col">@Html.DisplayNameFor(model => model.First().CustomerPhone)</th>
+                    <th scope="col">@Html.DisplayNameFor(model => model.First().Email)</th>
+                    <th scope="col"></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <th scope="row"> @*@Html.DisplayFor(modelItem => item.OrderID)*@@item.OrderID</th>
+                        <td> @*@Html.DisplayFor(modelItem => item.OrderDate)*@ @item.OrderDate</td>
+                        <td>@Html.DisplayFor(modelItem => item.PaymentType)</td>
+                        <td> @Html.DisplayFor(modelItem => item.CustomerName)</td>
+                        <td>@Html.DisplayFor(modelItem => item.Surname)</td>
+                        <td>@Html.DisplayFor(modelItem => item.CustomerPhone)</td>
+                        <td> @Html.DisplayFor(modelItem => item.Email)</td>
+                        <td>@Html.ActionLink("Details", "Cusdetails", new { id = item.OrderID }) |</td>
+                    </tr>
+                    @*<tr>
+                            <th scope="row">2</th>
+                            <td>Jacob</td>
+                            <td>Thornton</td>
+                            <td>fat</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">3</th>
+                            <td>Larry</td>
+                            <td>the Bird</td>
+                            <td>twitter</td>
+                        </tr>*@
+                }
+            </tbody>
+        </table>
 
-            <td>
-                @Html.DisplayFor(modelItem => item.CustomerName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Surname)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CustomerPhone)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
 
-            <td>
-                @*@Html.ActionLink("Edit", "Edit", new { id = item.OrderID }) |*@
-                @Html.ActionLink("Details", "Cusdetails", new { id = item.OrderID }) |
-                @*@Html.ActionLink("Delete", "Delete", new { id = item.OrderID })*@
-            </td>
-        </tr>
-    }
+    </div>
+</body>
 
-</table>
+
 
 @Html.PagedListPager(Model, page => Url.Action("CusOngoing", new { page, searchString = Request.QueryString["searchString"], search = Request.QueryString["search"] }),
   new PagedListRenderOptions() { Display = PagedListDisplayMode.IfNeeded, DisplayPageCountAndCurrentLocation = true, DisplayItemSliceAndTotal = true })
